<resources>
    <string name="app_name">Conecta4</string>
    <string name="invalid_movement">Movimiento Invalido</string>
    <string name="no_en_curso">La partida no esta en curso</string>
    <string name="titulo_lista_partidas">Partida</string>

    <string name="boton_nueva">CREAR PARTIDA</string>
    <string name="boton_cargar">UNIRSE A PARTIDA</string>
    <string name="boton_ajustes">AJUSTES</string>
    <string name="boton_salir">SALIR</string>
    <string name="boton_salir_guardas">GUARDAR Y SALIR</string>
    <string name="boton_lista">LISTA PARTIDAS</string>
    <string name="fichas">ficha</string>

    <string name="tiutlo_dialogo">Fin del juego</string>
    <string name="msg_dialogo">¿Comenzar nueva partida?</string>
    <string name="aceptar_dialogo">SI</string>
    <string name="cancelar_dialogo">NO</string>
    <string name="sin_partidas">No hay partidas disponibles</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="action_register">Registrarse</string>

    <string name="sesion_iniciada">Sesion Iniciada</string>
    <string name="sesion_Nombre">Email:</string>
    <string name="sesion_uuid">UUID:</string>
    <string name="cerrar_sesion">Cerrar Sesion:</string>
    <string name="local_text">Local</string>
    <string name="online_text">Online</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Iniciar sesion</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="inicio_sesion">Iniciar Sesion</string>
    <string name="registro">registro</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_updating_round">Error updating Round</string>
    <string name="error_adding_round">Error adding Round</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


</resources>
