<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MenuActivity">


    <ImageView
            android:layout_width="200dp"
            tools:srcCompat="@drawable/icono_conecta4"
            android:id="@+id/imageView" android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            tools:text="@string/app_name"
            android:id="@+id/tituloMenu"
            android:layout_below="@id/imageView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:fontFamily="casual"
            android:typeface="normal" android:textStyle="bold"
            android:textAllCaps="false"/>
    <Button
            android:text="@string/boton_nueva"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tituloMenu"
            android:id="@+id/nuevapartida"
            android:layout_marginStart="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" style="@style/Widget.AppCompat.Button"
            android:background="@drawable/botonMenu" tools:text="@string/boton_nueva"/>

    <Button
            android:text="@string/boton_cargar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nuevapartida"
            android:layout_marginStart="40dp"
            android:aligns
            android:id="@+id/cargarpartida"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" android:background="@drawable/botonMenu" tools:text="@string/boton_cargar"/>

    <Button
            android:text="@string/boton_salir"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cargarpartida"
            android:layout_marginStart="40dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/salir"
            android:layout_marginTop="30dp" android:background="@drawable/botonMenu"/>
</RelativeLayout>